# networkit

./: .gitignore  .gitmodules  CMakeLists.txt
evaluation_scripts/: bio0.txt  bio400.txt  evaluation.py  evaluation_runner.sh  evaluation_runner_big.sh  facebook.py  facebooknames.txt  generatednames.txt  means.py  time_evaluation.py
include/networkit/auxiliary/: PerfEventCountHardware.hpp  PrioQueue.hpp  SparseVector.hpp  SpinLock.hpp
include/networkit/coarsening/: GraphCoarsening.hpp
include/networkit/community/: CommunityDetectionAlgorithm.hpp  ConductanceCommunityCleanup.hpp  CutClustering.hpp  DynamicForest.hpp  EgoSplitting.hpp  LFM.hpp  LPDegreeOrdered.hpp  LPPotts.hpp  LouvainMapEquation.hpp  OverlappingCommunityDetectionAlgorithm.hpp  PLM.hpp  PLP.hpp  ParallelAgglomerativeClusterer.hpp  QuasiThresholdEditingLinear.hpp  QuasiThresholdEditingLocalMover.hpp  QuasiThresholdGreedyBound.hpp
include/networkit/components/: ParallelConnectedComponents.hpp
input/: README.md  grassweb.pairs
networkit/: _NetworKit.pyx  __init__.py  community.py  community.pyx  dynamic.py  generators.py  geometric.py  structures.pxd  structures.pyx
networkit/cpp/community/: CMakeLists.txt  CommunityDetectionAlgorithm.cpp  ConductanceCommunityCleanup.cpp  CutClustering.cpp  DynamicForest.cpp  EgoSplitting.cpp  EgoSplitting.h  LFM.cpp  LPDegreeOrdered.cpp  LPPotts.cpp  LouvainMapEquation.cpp  OverlappingCommunityDetectionAlgorithm.cpp  PLM.cpp  PLP.cpp  ParallelAgglomerativeClusterer.cpp  QuasiThresholdEditingLinear.cpp  QuasiThresholdEditingLinear.h  QuasiThresholdEditingLocalMover.cpp  QuasiThresholdEditingLocalMover.h  QuasiThresholdGreedyBound.cpp
networkit/cpp/community/QuasiThresholdMover/: BucketQueue.cpp  DynamicForest.cpp  EditingRunner.cpp  QuasiThresholdEditingLinear.cpp
networkit/cpp/community/QuasiThresholdMover/test/: CMakeLists.txt  DynamicForestGTest.cpp
networkit/cpp/community/cleanup/: MergeCommunities.cpp  SignificanceCalculator.cpp  SingleCommunityCleanUp.cpp
networkit/cpp/community/cleanup/test/: CleanUpGTest.cpp
networkit/cpp/community/test/: CMakeLists.txt  CommunityGTest.cpp  DynamicForestGTest.cpp  EgoSplittingGTest.cpp
networkit/cpp/dynamics/: CMakeLists.txt  CommunityEvent.cpp  CommunityEvent.h  CoverUpdater.cpp  CoverUpdater.h
networkit/cpp/graph/: CMakeLists.txt  DynamicForest.cpp  DynamicForest.h  RandomMaximumSpanningForest.cpp
networkit/cpp/graph/test/: CMakeLists.txt  DynamicForestGTest.cpp  DynamicForestGTest.h
networkit/test/: test_community.py
notebooks/: Conversion.ipynb  QTGEvaluation.ipynb  QTGPlots.ipynb  QTGPlots2.ipynb  QTGPlots_newcolumns.ipynb  QTGPlots_oldcolumns.ipynb  convert_cm_to_metis.py
(+68 files in other folders)
